--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -428,6 +428,7 @@ src/transport/transport_api_offer_hello.c
 src/util/bandwidth.c
 src/util/benchmark.c
 src/util/bio.c
+src/util/buffer.c
 src/util/client.c
 src/util/common_allocation.c
 src/util/common_endian.c
@@ -464,6 +465,7 @@ src/util/getopt.c
 src/util/getopt_helpers.c
 src/util/gnunet-config-diff.c
 src/util/gnunet-config.c
+src/util/gnunet-crypto-tvg.c
 src/util/gnunet-ecc.c
 src/util/gnunet-qr.c
 src/util/gnunet-resolver.c
